5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4193/executions/1582_1326.log
== TEST (2019-03-12 17:43:26) 
-- CODE:
40 - 35
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:43:31) 
-- CODE:
40 - 35
-- EXECUTION TIME:
0.150609
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:44:33) 
-- CODE:
40 - 35
-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:44:50) 
-- CODE:
40 - 35
-- EXECUTION TIME:
0.139656
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:06) 
-- CODE:
Print(40-35)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    Print(40-35)
NameError: name 'Print' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:46:16) 
-- CODE:
Print(40-35)
-- EXECUTION TIME:
0.184868
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1326/main.py", line 1, in <module>
    Print(40-35)
NameError: name 'Print' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:46:55) 
-- CODE:
print(40-35)
-- OUTPUT:
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:48:52) 
-- CODE:
print(40+35)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:49:13) 
-- CODE:
print(40-35=22)
-- ERROR:
File "XXXX", line 1
    print(40-35=22)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:49:18) 
-- CODE:
print(40-35=22)
-- EXECUTION TIME:
0.148817
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    print(40-35=22)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:51:09) 
-- CODE:
print("40+35")
-- OUTPUT:
40+35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:51:12) 
-- CODE:
print("40+35")
-- EXECUTION TIME:
0.135251
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
40+35
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:51:29) 
-- CODE:
print"(40+35)"
-- ERROR:
File "XXXX", line 1
    print"(40+35)"
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:51:32) 
-- CODE:
print"(40+35)"
-- EXECUTION TIME:
0.131667
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    print"(40+35)"
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:52:05) 
-- CODE:
print("40 + 35")
-- OUTPUT:
40 + 35
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:53:01) 
-- CODE:
print(40+35=75)
-- ERROR:
File "XXXX", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:53:05) 
-- CODE:
print(40+35=75)
-- EXECUTION TIME:
0.200247
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:42:25) 
-- CODE:
print(40+35=75)
-- ERROR:
File "XXXX", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:42:34) 
-- CODE:
print(40+35=75)
-- ERROR:
File "XXXX", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:42:46) 
-- CODE:
print(40+35=75)
-- ERROR:
File "XXXX", line 1
    print(40+35=75)
         ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:43:22) 
-- CODE:
print(R$40+R$35= 75)
-- ERROR:
File "XXXX", line 1
    print(R$40+R$35= 75)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:44:03) 
-- CODE:
print("R$40+R$35= 75"")
-- ERROR:
File "XXXX", line 1
    print("R$40+R$35= 75"")
                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:44:57) 
-- CODE:
print("R$40+R$35= 75"")
-- ERROR:
File "XXXX", line 1
    print("R$40+R$35= 75"")
                          ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 11:45:02) 
-- CODE:
print("R$40+R$35= 75"")
-- EXECUTION TIME:
0.119854
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    print("R$40+R$35= 75"")
                          ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:45:36) 
-- CODE:
print"((R$40+R$35= 75""))
-- ERROR:
File "XXXX", line 1
    print"((R$40+R$35= 75""))
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 11:48:10) 
-- CODE:
print(R$40+R$35)
-- ERROR:
File "XXXX", line 1
    print(R$40+R$35)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 10:54:37) 
-- CODE:
print("Adiçao:,40+35)
-- ERROR:
File "XXXX", line 1
    print("Adiçao:,40+35)
                         ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 10:54:43) 
-- CODE:
print("Adiçao:,40+35)
-- EXECUTION TIME:
0.135403
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    print("Adi\xe7ao:,40+35)
                         ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 10:55:17) 
-- CODE:
print("Adicao:, 40 + 35)
-- ERROR:
File "XXXX", line 1
    print("Adicao:, 40 + 35)
                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 10:55:25) 
-- CODE:
print("Adicao:, 40 + 35)
-- EXECUTION TIME:
0.166353
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    print("Adicao:, 40 + 35)
                           ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 10:56:01) 
-- CODE:
print("Adição: ",40+35)
-- OUTPUT:
Adição:  75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 10:56:07) 
-- CODE:
print("Adição: ",40+35)
-- EXECUTION TIME:
0.267261
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1326/main.py", line 1, in <module>
    print("Adi\xe7\xe3o: ",40+35)
UnicodeEncodeError: 'ascii' codec can't encode characters in position 3-4: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 10:56:18) 
-- CODE:
print("Adição: ",40 + 35)
-- OUTPUT:
Adição:  75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 10:56:51) 
-- CODE:
print(Adição:,40 + 35)
-- ERROR:
File "XXXX", line 1
    print(Adição:,40 + 35)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 10:58:08) 
-- CODE:
print("Adição:", 40 + 35)
-- OUTPUT:
Adição: 75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 10:58:14) 
-- CODE:
print("Adição:", 40 + 35)
-- EXECUTION TIME:
0.186173
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1582/1326/main.py", line 1, in <module>
    print("Adi\xe7\xe3o:", 40 + 35)
UnicodeEncodeError: 'ascii' codec can't encode characters in position 3-4: ordinal not in range(128)

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 10:58:35) 
-- CODE:
print("Adição: ", 40 + 35)
-- OUTPUT:
Adição:  75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 10:59:08) 
-- CODE:
print(Adição:, 40 + 35)
-- ERROR:
File "XXXX", line 1
    print(Adição:, 40 + 35)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 10:59:36) 
-- CODE:
print("SOMA:", 40 + 35)
-- OUTPUT:
SOMA: 75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 10:59:41) 
-- CODE:
print("SOMA:", 40 + 35)
-- EXECUTION TIME:
0.121012
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
SOMA: 75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 10:59:56) 
-- CODE:
print("SOMA: ", 40 + 35)
-- OUTPUT:
SOMA:  75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 11:00:03) 
-- CODE:
print("SOMA: ", 40 + 35)
-- EXECUTION TIME:
0.186243
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
SOMA:  75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 11:00:20) 
-- CODE:
print("SOMA: ", 40 + 35=75)
-- ERROR:
File "XXXX", line 1
    print("SOMA: ", 40 + 35=75)
                   ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 11:00:25) 
-- CODE:
print("SOMA: ", 40 + 35=75)
-- EXECUTION TIME:
0.156971
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 1
    print("SOMA: ", 40 + 35=75)
                   ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:13:38) 
-- CODE:
print(digite a soma de 40+35)
-- ERROR:
File "XXXX", line 1
    print(digite a soma de 40+35)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:29:24) 
-- CODE:
print(soma de 40+35)
print (soma de 40+35=75)
-- ERROR:
File "XXXX", line 1
    print(soma de 40+35)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:51:50) 
-- CODE:
print"digite a soma de 40+35=75"
-- ERROR:
File "XXXX", line 1
    print"digite a soma de 40+35=75"
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:52:12) 
-- CODE:
print"(digite a soma de 40+35=75)")
-- ERROR:
File "XXXX", line 1
    print"(digite a soma de 40+35=75)")
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:52:18) 
-- CODE:
print"(digite a soma de 40+35=75)"
-- ERROR:
File "XXXX", line 1
    print"(digite a soma de 40+35=75)"
                                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:52:48) 
-- CODE:
print("digite a soma de 40+35=75")
-- OUTPUT:
digite a soma de 40+35=75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:52:54) 
-- CODE:
print("digite a soma de 40+35=75")
-- EXECUTION TIME:
0.146568
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
digite a soma de 40+35=75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:53:08) 
-- CODE:
print(("digite a soma de 40+35=75"))
-- OUTPUT:
digite a soma de 40+35=75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 16:53:13) 
-- CODE:
print(("digite a soma de 40+35=75"))
-- EXECUTION TIME:
0.215636
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
digite a soma de 40+35=75
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 16:53:45) 
-- CODE:
print(("digite a soma de 40+35 = 75"))

-- OUTPUT:
digite a soma de 40+35 = 75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-19 17:06:48) 
-- CODE:
int(40+35)
int(40+35=75)

-- ERROR:
File "XXXX", line 2
    int(40+35=75)
       ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-19 17:06:55) 
-- CODE:
int(40+35)
int(40+35=75)

-- EXECUTION TIME:
0.17199
-- ERROR:
  File "/home/codebench/codes/1582/1326/main.py", line 2
    int(40+35=75)
       ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 15:58:06) 
-- CODE:
print(40+35)

-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 15:58:11) 
-- CODE:
print(40+35)

-- EXECUTION TIME:
0.142469
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
